--- a/template/template-react-18/src/App.module.scss
+++ b/template/template-react-18/src/App.module.scss
@@ -14,24 +14,25 @@
 }
 
 .AppHeader {
-    background-color: #282c34;
-    min-height: 100vh;
     display: flex;
+    min-height: 100vh;
+    background-color: #282c34;
+    color: white;
+    font-size: calc(10px + 2vmin);
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
 }
 
 .AppLink {
     color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
