--- a/template/template-react-18/src/pages/Index/style.module.scss
+++ b/template/template-react-18/src/pages/Index/style.module.scss
@@ -20,24 +20,26 @@
 }
 
 .AppHeader {
-    background-color: #282c34;
-    min-height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
+    height: 40px;
+    min-height: 100vh;
+    background-color: #282c34;
     color: white;
+    font-size: calc(10px + 2vmin);
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .AppLink {
     color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes app-logo-spin {
     from {
         transform: rotate(0deg);
     }
+
     to {
         transform: rotate(360deg);
     }
